--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@ How can we bake in transparency in models so human operators can contextualize s
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><b>Beyond the Imitation Game: Quantifying and extrapolating the capabilities of language models</b> <br /> 
+Srivastava et al. <br /> 
+arXiv, 2022 <br /> 
+<a href="https://arxiv.org/abs/2206.04615">Paper</a>, <a href="https://github.com/google/BIG-bench">Data</a></p>
+</li>
+</ul>
+<ul>
 <li><p><b>ProsocialDialog: A Prosocial Backbone for Conversational Agents</b> <br /> 
 Hyunwoo Kim, Youngjae Yu, Liwei Jiang, Ximing Lu, Daniel Khashabi, Gunhee Kim, Yejin Choi and Maarten Sap  <br /> 
 arXiv, 2022 <br /> 
@@ -441,7 +448,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-26 08:56:21 IST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-06-09 17:42:12 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
