--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-01-22 15:55:50 UTC, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-23 10:47:34 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
