--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2211.00053"><b>Generating Sequences by Learning to Self-Correct.</b></a>  <br />    Sean Welleck, Ximing Lu, Peter West, Faeze Brahman, Tianxiao Shen, Daniel Khashabi and Yejin Choi. <br />    <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2023. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2212.10560"><b>Self-Instruct: Aligning Language Model with Self Generated Instructions.</b></a>  <br />    Yizhong Wang and Yeganeh Kordi and Swaroop Mishra and Alisa Liu and Noah A. Smith and Daniel Khashabi and Hannaneh Hajishirzi <br />    <font color="DarkRed">arXiv preprint arXiv:2212.10560</font>, 2022. <font size=-1><a href="https://github.com/yizhongw/self-instruct">[code]</a></font></p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2212.10511"><b>When Not to Trust Language Models: Investigating Effectiveness and Limitations of Parametric and Non-Parametric Memories.</b></a>  <br />    Alex Mallen and Akari Asai and Victor Zhong and Rajarshi Das and Hannaneh Hajishirzi and Daniel Khashabi <br />    <font color="DarkRed">arXiv preprint arXiv:2212.10511</font>, 2022. <font size=-1><a href="https://github.com/AlexTMallen/adaptive-retrieval">[code]</a></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2211.00053"><b>Generating Sequences by Learning to Self-Correct.</b></a>  <br />    Sean Welleck, Ximing Lu, Peter West, Faeze Brahman, Tianxiao Shen, Daniel Khashabi and Yejin Choi. <br />    <font color="DarkRed">arXiv preprint arXiv:2211.00053</font>, 2022. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -103,7 +103,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2204.07705"><b>Super-NaturalInstructions: Generalization via Declarative Instructions on 1600+ Tasks.</b></a>  <br />    Yizhong Wang, Swaroop Mishra, Pegah Alipoormolabashi, Yeganeh Kordi, Amirreza Mirzaei, Anjana Arunkumar, Arjun Ashok, Arut Selvan Dhanasekaran, Atharva Naik, David Stap, Eshaan Pathak, Giannis Karamanolakis, Haizhi Gary Lai, Ishan Purohit, Ishani Mondal, Jacob Anderson, Kirby Kuznia, Krima Doshi, Maitreya Patel, Kuntal Kumar Pal, Mehrad Moradshahi, Mihir Parmar, Mirali Purohit, Neeraj Varshney, Phani Rohitha Kaza, Pulkit Verma, Ravsehaj Singh Puri, Rushang Karia, Shailaja Keyur Sampat, Savan Doshi, Siddhartha Mishra, Sujan Reddy, Sumanta Patro, Tanay Dixit, Xudong Shen, Chitta Baral, Yejin Choi, Noah A. Smith, Hannaneh Hajishirzi and Daniel Khashabi. <br />    <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2022. <font size=-1><a href="https://github.com/allenai/natural-instructions">[data]</a> <a href="http://danielkhashabi.com/files/2022_super_natural_instructions/nvidia-superni-talk.key">[slides]</a> <a href="http://danielkhashabi.com/files/2022_super_natural_instructions/nvidia-superni-talk.pdf">[slides2]</a> <a href="http://danielkhashabi.com/files/2022_super_natural_instructions/emnlp_poster.pdf">[poster]</a> <a href="https://instructions.apps.allenai.org/">[project]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2204.07705"><b>Super-NaturalInstructions: Generalization via Declarative Instructions on 1600+ Tasks.</b></a>  <br />    Yizhong Wang, Swaroop Mishra, Pegah Alipoormolabashi, Yeganeh Kordi, Amirreza Mirzaei, Anjana Arunkumar, Arjun Ashok, Arut Selvan Dhanasekaran, Atharva Naik, David Stap, Eshaan Pathak, Giannis Karamanolakis, Haizhi Gary Lai, Ishan Purohit, Ishani Mondal, Jacob Anderson, Kirby Kuznia, Krima Doshi, Maitreya Patel, Kuntal Kumar Pal, Mehrad Moradshahi, Mihir Parmar, Mirali Purohit, Neeraj Varshney, Phani Rohitha Kaza, Pulkit Verma, Ravsehaj Singh Puri, Rushang Karia, Shailaja Keyur Sampat, Savan Doshi, Siddhartha Mishra, Sujan Reddy, Sumanta Patro, Tanay Dixit, Xudong Shen, Chitta Baral, Yejin Choi, Noah A. Smith, Hannaneh Hajishirzi and Daniel Khashabi. <br />    <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2022. <font size=-1><a href="https://github.com/allenai/natural-instructions">[data]</a> <a href="http://danielkhashabi.com/files/2022_super_natural_instructions/nvidia-superni-talk.key">[slides]</a> <a href="http://danielkhashabi.com/files/2022_super_natural_instructions/nvidia-superni-talk.pdf">[slides2]</a> <a href="http://danielkhashabi.com/files/2022_super_natural_instructions/emnlp_poster.pdf">[poster]</a> <a href="https://instructions.apps.allenai.org/">[project]</a> <a href="https://blog.allenai.org/call-for-contributions-a-community-driven-repository-of-natural-language-instructions-9d3f24d5a9db">[blog]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -288,7 +288,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-01-23 10:47:34 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-23 11:02:25 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
