--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <ul>
 <li><p>Spring 2023: <a href="https://self-supervised.cs.jhu.edu/sp2023/">CSCI 601.471/671, NLP: Self-supervised Models</a></p>
 </li>
-<li><p>Fall 2022: <a href="https://self-supervised.cs.jhu.edu">CSCI 601.771, Advances in Self-supervised Models</a></p>
+<li><p>Fall 2022: <a href="https://self-supervised.cs.jhu.edu/fa2022/">CSCI 601.771, Advances in Self-supervised Models</a></p>
 </li>
 </ul>
 <p><h2 id="publication">Publication</h2></p>
@@ -288,7 +288,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-01-23 11:02:25 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-02-16 23:11:49 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
