--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2206.04615"><b>Beyond the Imitation Game: Quantifying and extrapolating the capabilities of language models.</b></a>  <br />    Aarohi Srivastava, Abhinav Rastogi, Abhishek Rao, Abu Awal Md Shoeb, Abubakar Abid, Adam Fisch, Adam R. Brown, Adam Santoro, Aditya Gupta, Adri`{a} Garriga-Alonso, Agnieszka Kluska, Aitor Lewkowycz, Akshat Agarwal, Alethea Power, Alex Ray, Alex Warstadt, Alexander W. Kocurek, Ali Safaya, Ali Tazarv, Alice Xiang, Alicia Parrish, Allen Nie, Aman Hussain, Amanda Askell, Amanda Dsouza, Ambrose Slone, Ameet Rahane, Anantharaman S. Iyer, Anders Andreassen, Andrea Madotto, Andrea Santilli, Andreas Stuhlm"{u}ller, Andrew Dai, Andrew La, Andrew Lampinen, Andy Zou, Angela Jiang, Angelica Chen, Anh Vuong, Animesh Gupta and others. <br />    <font color="DarkRed">Transactions on Machine Learning Research (TMLR)</font>, 2023. <font size=-1><a href="https://github.com/google/BIG-bench">[data]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2212.10560"><b>Self-Instruct: Aligning Language Model with Self Generated Instructions.</b></a>  <br />    Yizhong Wang and Yeganeh Kordi and Swaroop Mishra and Alisa Liu and Noah A. Smith and Daniel Khashabi and Hannaneh Hajishirzi <br />    <font color="DarkRed">arXiv preprint arXiv:2212.10560</font>, 2022. <font size=-1><a href="https://github.com/yizhongw/self-instruct">[code]</a></font></p>
 </li>
 </ul>
@@ -92,10 +96,6 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2210.10040"><b>The Tail Wagging the Dog: Dataset Construction Biases of Social Bias Benchmarks.</b></a>  <br />    Nikil Roashan Selvam, Sunipa Dev, Daniel Khashabi, Tushar Khot and Kai-Wei Chang. <br />    <font color="DarkRed">arXiv preprint arXiv:2210.10040</font>, 2022. <font size=-1></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2206.04615"><b>Beyond the Imitation Game: Quantifying and extrapolating the capabilities of language models.</b></a>  <br />    Aarohi Srivastava, Abhinav Rastogi, Abhishek Rao, Abu Awal Md Shoeb, Abubakar Abid, Adam Fisch, Adam R. Brown, Adam Santoro, Aditya Gupta, Adri`{a} Garriga-Alonso, Agnieszka Kluska, Aitor Lewkowycz, Akshat Agarwal, Alethea Power, Alex Ray, Alex Warstadt, Alexander W. Kocurek, Ali Safaya, Ali Tazarv, Alice Xiang, Alicia Parrish, Allen Nie, Aman Hussain, Amanda Askell, Amanda Dsouza, Ambrose Slone, Ameet Rahane, Anantharaman S. Iyer, Anders Andreassen, Andrea Madotto, Andrea Santilli, Andreas Stuhlm"{u}ller, Andrew Dai, Andrew La, Andrew Lampinen, Andy Zou, Angela Jiang, Angelica Chen, Anh Vuong, Animesh Gupta and others. <br />    <font color="DarkRed">arXiv preprint arXiv:2206.04615</font>, 2022. <font size=-1><a href="https://github.com/google/BIG-bench">[data]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -288,7 +288,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-02-16 23:11:49 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-05 18:43:30 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
