--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@ How can we enable machines to communicate via <i>reasons</i>, for a broad-rangin
 How can we bake in transparency in models so human operators can contextualize system output? Can we make such transparency into a truly democratic oversight of systems and their algorithmic biases?  Can we build systems that can recourse when there is harm to those that are marginalized? Can we build systems that reduce our socio-political divisions? (papers:  <a href="https://arxiv.org/abs/2010.02428">EMNLP&rsquo;20</a>, <a href="https://arxiv.org/abs/1906.03538">NAACL&rsquo;19</a>)</p>
 </li>
 </ul>
+<div class="infoblock">
+<div class="blockcontent">
+<p><i>If you are an undergraduate or masters student and would like to work on research with my group, please fill out <a href="https://forms.gle/6AZg34JVkkZZieySA">this form</a>.</i></p>
+</div></div>
 <p><h2 id="talks">Select Talks</h2></p>
 <ul>
 <li><p>University of Maryland, <a href="files/2023_umd_talk/umd-talk-2023-split.pdf">Ailments of Alignment: Hurdles in Adapting Large Language Models to Follow Human Demands</a>, 2023.</p>
@@ -81,15 +85,15 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2212.10560"><b>Self-Instruct: Aligning Language Model with Self Generated Instructions.</b></a>  <br />    Yizhong Wang and Yeganeh Kordi and Swaroop Mishra and Alisa Liu and Noah A. Smith and Daniel Khashabi and Hannaneh Hajishirzi <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2023. <font size=-1><a href="https://github.com/yizhongw/self-instruct">[code]</a></font></p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/abs/2212.10511"><b>When Not to Trust Language Models: Investigating Effectiveness and Limitations of Parametric and Non-Parametric Memories.</b></a>  <br />    Alex Mallen and Akari Asai and Victor Zhong and Rajarshi Das and Hannaneh Hajishirzi and Daniel Khashabi <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2023. <font size=-1><a href="https://github.com/AlexTMallen/adaptive-retrieval">[code]</a></font></p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2210.10040"><b>The Tail Wagging the Dog: Dataset Construction Biases of Social Bias Benchmarks.</b></a>  <br />    Nikil Roashan Selvam, Sunipa Dev, Daniel Khashabi, Tushar Khot and Kai-Wei Chang. <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2023. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2212.10560"><b>Self-Instruct: Aligning Language Model with Self Generated Instructions.</b></a>  <br />    Yizhong Wang and Yeganeh Kordi and Swaroop Mishra and Alisa Liu and Noah A. Smith and Daniel Khashabi and Hannaneh Hajishirzi <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2023. <font size=-1><a href="https://github.com/yizhongw/self-instruct">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -290,7 +294,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-02 15:19:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-05-03 09:34:38 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
