--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2205.11603"><b>Representation Projection Invariance Mitigates Representation Collapse.</b></a>  <br />    Anastasia Razdaibiedina and Ashish Khetan and Zohar Karnin and Daniel Khashabi and Vishaal Kapoor and Vivek Madan <br />    <font color="DarkRed">arXiv preprint arXiv:2205.11603</font>, 2023. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2212.10511"><b>When Not to Trust Language Models: Investigating Effectiveness and Limitations of Parametric and Non-Parametric Memories.</b></a>  <br />    Alex Mallen and Akari Asai and Victor Zhong and Rajarshi Das and Hannaneh Hajishirzi and Daniel Khashabi <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2023. <font size=-1><a href="https://github.com/AlexTMallen/adaptive-retrieval">[code]</a></font></p>
 </li>
 </ul>
@@ -296,7 +300,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-12 10:54:45 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-05-12 10:56:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
