--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ How can we bake in transparency in models so human operators can contextualize s
 </div></div>
 <p><h2 id="talks">Select Talks</h2></p>
 <ul>
-<li><p>University of Maryland, <a href="files/2023_umd_talk/umd-talk-2023-split.pdf">Ailments of Alignment: Hurdles in Adapting Large Language Models to Follow Human Demands</a>, 2023.</p>
+<li><p>Johns Hopkins Center for Health Security, <a href="files/2023_public_health/2023-jhu-public-health-split.pdf">On AI’s Impact — An Engineer’s Take</a>, 2023.</p>
 </li>
 <li><p>University of Maryland, <a href="files/2023_umd_talk/umd-talk-2023-split.pdf">Ailments of Alignment: Hurdles in Adapting Large Language Models to Follow Human Demands</a>, 2023.</p>
 </li>
@@ -300,7 +300,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-12 10:56:37 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-05-12 11:01:16 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
