--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2305.10713"><b>Flatness-Aware Prompt Selection Improves Accuracy and Sample Efficiency.</b></a>  <br />    Lingfeng Shen and Weiting Tan and Boyuan Zheng and Daniel Khashabi <br />    <font color="DarkRed">arXiv preprint arXiv:2205.11603</font>, 2023. <font size=-1><a href="https://github.com/shadowkiller33/flatness">[code]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2212.10511"><b>When Not to Trust Language Models: Investigating Effectiveness and Limitations of Parametric and Non-Parametric Memories.</b></a>  <br />    Alex Mallen and Akari Asai and Victor Zhong and Rajarshi Das and Hannaneh Hajishirzi and Daniel Khashabi <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2023. <font size=-1><a href="https://github.com/AlexTMallen/adaptive-retrieval">[code]</a></font></p>
 </li>
 </ul>
@@ -104,10 +108,6 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2211.00053"><b>Generating Sequences by Learning to Self-Correct.</b></a>  <br />    Sean Welleck, Ximing Lu, Peter West, Faeze Brahman, Tianxiao Shen, Daniel Khashabi and Yejin Choi. <br />    <font color="DarkRed">International Conference on Learning Representations (ICLR)</font>, 2023. <font size=-1></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2206.04615"><b>Beyond the Imitation Game: Quantifying and extrapolating the capabilities of language models.</b></a>  <br />    Aarohi Srivastava, Abhinav Rastogi, Abhishek Rao, Abu Awal Md Shoeb, Abubakar Abid, Adam Fisch, Adam R. Brown, Adam Santoro, Aditya Gupta, Adri`{a} Garriga-Alonso, Agnieszka Kluska, Aitor Lewkowycz, Akshat Agarwal, Alethea Power, Alex Ray, Alex Warstadt, Alexander W. Kocurek, Ali Safaya, Ali Tazarv, Alice Xiang, Alicia Parrish, Allen Nie, Aman Hussain, Amanda Askell, Amanda Dsouza, Ambrose Slone, Ameet Rahane, Anantharaman S. Iyer, Anders Andreassen, Andrea Madotto, Andrea Santilli, Andreas Stuhlm"{u}ller, Andrew Dai, Andrew La, Andrew Lampinen, Andy Zou, Angela Jiang, Angelica Chen, Anh Vuong, Animesh Gupta and others. <br />    <font color="DarkRed">Transactions on Machine Learning Research (TMLR)</font>, 2023. <font size=-1><a href="https://github.com/google/BIG-bench">[data]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -300,7 +300,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-12 11:01:16 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-05-19 13:02:48 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
