--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2305.13252"><b>&lsquo;&lsquo;According to &hellip;&rsquo;&rsquo;: Prompting Language Models Improves Quoting from Pre-Training Data.</b></a>  <br />    Orion Weller, Marc Marone, Nathaniel Weir, Dawn Lawrie, Daniel Khashabi and Benjamin Van Durme. <br />    <font color="DarkRed">arXiv preprint arXiv:2305.13252</font>, 2023. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2205.11603"><b>Representation Projection Invariance Mitigates Representation Collapse.</b></a>  <br />    Anastasia Razdaibiedina and Ashish Khetan and Zohar Karnin and Daniel Khashabi and Vishaal Kapoor and Vivek Madan <br />    <font color="DarkRed">arXiv preprint arXiv:2205.11603</font>, 2023. <font size=-1></font></p>
 </li>
 </ul>
@@ -115,11 +119,11 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2204.07705"><b>Super-NaturalInstructions: Generalization via Declarative Instructions on 1600+ Tasks.</b></a>  <br />    Yizhong Wang, Swaroop Mishra, Pegah Alipoormolabashi, Yeganeh Kordi, Amirreza Mirzaei, Anjana Arunkumar, Arjun Ashok, Arut Selvan Dhanasekaran, Atharva Naik, David Stap, Eshaan Pathak, Giannis Karamanolakis, Haizhi Gary Lai, Ishan Purohit, Ishani Mondal, Jacob Anderson, Kirby Kuznia, Krima Doshi, Maitreya Patel, Kuntal Kumar Pal, Mehrad Moradshahi, Mihir Parmar, Mirali Purohit, Neeraj Varshney, Phani Rohitha Kaza, Pulkit Verma, Ravsehaj Singh Puri, Rushang Karia, Shailaja Keyur Sampat, Savan Doshi, Siddhartha Mishra, Sujan Reddy, Sumanta Patro, Tanay Dixit, Xudong Shen, Chitta Baral, Yejin Choi, Noah A. Smith, Hannaneh Hajishirzi and Daniel Khashabi. <br />    <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2022. <font size=-1><a href="https://github.com/allenai/natural-instructions">[data]</a> <a href="http://danielkhashabi.com/files/2022_super_natural_instructions/nvidia-superni-talk.key">[slides]</a> <a href="http://danielkhashabi.com/files/2022_super_natural_instructions/nvidia-superni-talk.pdf">[slides2]</a> <a href="http://danielkhashabi.com/files/2022_super_natural_instructions/emnlp_poster.pdf">[poster]</a> <a href="https://instructions.apps.allenai.org/">[project]</a> <a href="https://blog.allenai.org/call-for-contributions-a-community-driven-repository-of-natural-language-instructions-9d3f24d5a9db">[blog]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2205.12688"><b>ProsocialDialog: A Prosocial Backbone for Conversational Agents.</b></a>  <br />    Hyunwoo Kim, Youngjae Yu, Liwei Jiang, Ximing Lu, Daniel Khashabi, Gunhee Kim, Yejin Choi and Maarten Sap. <br />    <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2022. <font size=-1><a href="https://github.com/skywalker023/prosocial-dialog/">[data]</a></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2205.12688"><b>ProsocialDialog: A Prosocial Backbone for Conversational Agents.</b></a>  <br />    Hyunwoo Kim, Youngjae Yu, Liwei Jiang, Ximing Lu, Daniel Khashabi, Gunhee Kim, Yejin Choi and Maarten Sap. <br />    <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2022. <font size=-1><a href="https://github.com/skywalker023/prosocial-dialog/">[data]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2204.07705"><b>Super-NaturalInstructions: Generalization via Declarative Instructions on 1600+ Tasks.</b></a>  <br />    Yizhong Wang, Swaroop Mishra, Pegah Alipoormolabashi, Yeganeh Kordi, Amirreza Mirzaei, Anjana Arunkumar, Arjun Ashok, Arut Selvan Dhanasekaran, Atharva Naik, David Stap, Eshaan Pathak, Giannis Karamanolakis, Haizhi Gary Lai, Ishan Purohit, Ishani Mondal, Jacob Anderson, Kirby Kuznia, Krima Doshi, Maitreya Patel, Kuntal Kumar Pal, Mehrad Moradshahi, Mihir Parmar, Mirali Purohit, Neeraj Varshney, Phani Rohitha Kaza, Pulkit Verma, Ravsehaj Singh Puri, Rushang Karia, Shailaja Keyur Sampat, Savan Doshi, Siddhartha Mishra, Sujan Reddy, Sumanta Patro, Tanay Dixit, Xudong Shen, Chitta Baral, Yejin Choi, Noah A. Smith, Hannaneh Hajishirzi and Daniel Khashabi. <br />    <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP)</font>, 2022. <font size=-1><a href="https://github.com/allenai/natural-instructions">[data]</a> <a href="http://danielkhashabi.com/files/2022_super_natural_instructions/nvidia-superni-talk.key">[slides]</a> <a href="http://danielkhashabi.com/files/2022_super_natural_instructions/nvidia-superni-talk.pdf">[slides2]</a> <a href="http://danielkhashabi.com/files/2022_super_natural_instructions/emnlp_poster.pdf">[poster]</a> <a href="https://instructions.apps.allenai.org/">[project]</a> <a href="https://blog.allenai.org/call-for-contributions-a-community-driven-repository-of-natural-language-instructions-9d3f24d5a9db">[blog]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -300,7 +304,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-19 13:02:48 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-05-22 22:37:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
