--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2305.13252"><b>&lsquo;&lsquo;According to &hellip;&rsquo;&rsquo;: Prompting Language Models Improves Quoting from Pre-Training Data.</b></a>  <br />    Orion Weller, Marc Marone, Nathaniel Weir, Dawn Lawrie, Daniel Khashabi and Benjamin Van Durme. <br />    <font color="DarkRed">arXiv preprint arXiv:2305.13252</font>, 2023. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2305.13252"><b>&lsquo;&lsquo;According to &hellip;&rsquo;&rsquo;: Prompting Language Models Improves Quoting from Pre-Training Data.</b></a>  <br />    Orion Weller, Marc Marone, Nathaniel Weir, Dawn Lawrie, Daniel Khashabi and Benjamin Van Durme. <br />    <font color="DarkRed">arXiv preprint arXiv:2305.13252</font>, 2023. <font size=-1><a href="https://github.com/JHU-CLSP/according-to">[code]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2305.10713"><b>Flatness-Aware Prompt Selection Improves Accuracy and Sample Efficiency.</b></a>  <br />    Lingfeng Shen and Weiting Tan and Boyuan Zheng and Daniel Khashabi <br />    <font color="DarkRed">arXiv preprint arXiv:2305.10713</font>, 2023. <font size=-1><a href="https://github.com/shadowkiller33/flatness">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -95,11 +99,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2305.10713"><b>Flatness-Aware Prompt Selection Improves Accuracy and Sample Efficiency.</b></a>  <br />    Lingfeng Shen and Weiting Tan and Boyuan Zheng and Daniel Khashabi <br />    <font color="DarkRed">arXiv preprint arXiv:2205.11603</font>, 2023. <font size=-1><a href="https://github.com/shadowkiller33/flatness">[code]</a></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2212.10511"><b>When Not to Trust Language Models: Investigating Effectiveness and Limitations of Parametric and Non-Parametric Memories.</b></a>  <br />    Alex Mallen and Akari Asai and Victor Zhong and Rajarshi Das and Hannaneh Hajishirzi and Daniel Khashabi <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2023. <font size=-1><a href="https://github.com/AlexTMallen/adaptive-retrieval">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2212.10511"><b>When Not to Trust Language Models: Investigating Effectiveness and Limitations of Parametric and Non-Parametric Memories.</b></a>  <br />    Alex Mallen and Akari Asai and Victor Zhong and Rajarshi Das and Daniel Khashabi and Hannaneh Hajishirzi <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2023. <font size=-1><a href="https://youtu.be/hJbxW0xct2E">[talk]</a> <a href="https://github.com/AlexTMallen/adaptive-retrieval">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -304,7 +304,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-05-22 22:37:41 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-10 12:17:17 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
