--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2210.10040"><b>The Tail Wagging the Dog: Dataset Construction Biases of Social Bias Benchmarks.</b></a>  <br />    Nikil Roashan Selvam, Sunipa Dev, Daniel Khashabi, Tushar Khot and Kai-Wei Chang. <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2023. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2210.10040"><b>The Tail Wagging the Dog: Dataset Construction Biases of Social Bias Benchmarks.</b></a>  <br />    Nikil Roashan Selvam, Sunipa Dev, Daniel Khashabi, Tushar Khot and Kai-Wei Chang. <br />    <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2023. <font size=-1><a href="http://danielkhashabi.com/files/2023_bias_eval/bias-eval-ACL23_Presentation.pdf">[slides]</a> <a href="http://danielkhashabi.com/files/2023_bias_eval/bias-eval-poster-acl2023.pdf">[poster]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -304,7 +304,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-06-10 12:17:17 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-06-10 16:37:14 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
