--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2307.08775"><b>GEAR: Augmenting Language Models with Generalizable and Efficient Tool Resolution.</b></a>  <br />    Yining Lu, Haoping Yu and Daniel Khashabi. <br />    <font color="DarkRed">arXiv preprint arXiv:2307.08775</font>, 2023. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2305.13252"><b>&lsquo;&lsquo;According to &hellip;&rsquo;&rsquo;: Prompting Language Models Improves Quoting from Pre-Training Data.</b></a>  <br />    Orion Weller, Marc Marone, Nathaniel Weir, Dawn Lawrie, Daniel Khashabi and Benjamin Van Durme. <br />    <font color="DarkRed">arXiv preprint arXiv:2305.13252</font>, 2023. <font size=-1><a href="https://github.com/JHU-CLSP/according-to">[code]</a></font></p>
 </li>
 </ul>
@@ -304,7 +308,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-05 11:56:00 +03, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-19 08:50:19 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
