--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Assistant Professor of <a href="https://www.cs.jhu.edu/">Computer Science</a> <b
 <a href="https://www.clsp.jhu.edu/">Center for Language and Speech Processing</a> <br />
 <a href="https://engineering.jhu.edu/">Whiting School of Engineering</a> <br />
 <a href="https://jhu.edu/">Johns Hopkins University</a> <br /><br />
-Office: Hackerman Hall 316B | Email: <tt>danielk ¯\_(ツ)_/¯ jhu.edu</tt> <br /></p>
+Office: Hackerman Hall 316B | Email: <tt>danielk <a href="https://en.wikipedia.org/wiki/At_sign">¯\_(ツ)_/¯</a> jhu.edu</tt> <br /></p>
 </td></tr></table>
 <p><h2 id="themes">Research Themes</h2></p>
 <p>My research is motivated by understanding the computational foundations of <i>intelligent behavior</i>, often through the lens of <i>natural language</i>.
@@ -308,7 +308,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-19 08:50:19 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-27 10:51:10 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
