--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <p><h2 id="teaching">Teaching</h2></p>
 <ul>
+<li><p>Spring 2024: <a href="https://self-supervised.cs.jhu.edu/sp2024/">CSCI 601.471/671, NLP: Self-supervised Models</a></p>
+</li>
 <li><p>Spring 2023: <a href="https://self-supervised.cs.jhu.edu/sp2023/">CSCI 601.471/671, NLP: Self-supervised Models</a></p>
 </li>
 <li><p>Fall 2022: <a href="https://self-supervised.cs.jhu.edu/fa2022/">CSCI 601.771, Advances in Self-supervised Models</a></p>
@@ -308,7 +310,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-07-27 10:51:10 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-07-27 10:52:32 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
